--- a/Color Game/index.html
+++ b/Color Game/index.html
@@ -4,10 +4,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
+<!-- Bootstrap 4 -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
+ <!-- Font awesome -->
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+ crossorigin="anonymous">
 <link rel="stylesheet" href="app.css">
 <title>RGB color game</title>
 </head>
@@ -19,7 +22,7 @@
         <h1>Color Game</h1>
     </section>
 
-    <section id="nav" class="text-center" >
+    <section id="nav" class="text-center container-fluid" >
         <div class="row">
 
             <div class="col-4">
@@ -30,12 +33,16 @@
                 <p id="msg" class="mb-0"></p>
             </div>
 
-            <div class="col-2 d-flex justify-content-end px-1">
-                <button  id="easy" class="btn btn-warning">EASY</button>
+            <div class="col-1.5 d-flex justify-content-end px-1">
+                <button  id="easy" class="btn btn-outline-warning">EASY</button>
             </div>
 
-            <div class="col-2 d-flex justify-content-start px-1">
-                <button  id="hard" class="btn btn-danger">HARD</button>
+            <div class="col-1.5 d-flex justify-content-start px-1">
+                <button  id="hard" class="btn btn-outline-danger active">HARD</button>
+            </div>
+
+            <div class="col-1 d-flex justify-content-start px-1 py-1">
+               <a href="https://www.w3schools.com/colors/colors_rgb.asp"><i class="far fa-question-circle"></i></a>
             </div>
 
         </div>
