Good Luck and bottom nav added.

--- a/Color Game/index.html
+++ b/Color Game/index.html
@@ -33,11 +33,11 @@
                 <p id="msg" class="mb-0"></p>
             </div>
 
-            <div class="col-1.5 d-flex justify-content-end px-1">
+            <div class="col-1 d-flex justify-content-end px-1">
                 <button  id="easy" class="btn btn-outline-warning">EASY</button>
             </div>
 
-            <div class="col-1.5 d-flex justify-content-start px-1">
+            <div class="col-1 d-flex justify-content-start px-1">
                 <button  id="hard" class="btn btn-outline-danger active">HARD</button>
             </div>
 
@@ -50,6 +50,7 @@
     </section>
 
     <section id="boxes" class="container">
+        
         <div class="row pt-4">
             <div  class="col-4"><button class="btn box" ></button> </div>
             <div  class="col-4"><button class="btn box"></button>  </div>
@@ -59,6 +60,16 @@
             <div  class="col-4"><button class="btn box " ></button> </div>
             <div  class="col-4"><button class="btn box"></button>  </div>
             <div  class="col-4"><button class="btn box"></button> </div>
+        </div>
+    </section>
+
+    <section id="bottomNavBar" class="d-flex text-center" >
+        <div class="container-fluid">
+            <a href="https://www.w3schools.com/colors/colors_rgb.asp"> What is RGB?</a>
+            <h3>How do you play ?</h3>
+            <p>Click on the difficulty and then choose the color that corresponds with the the header value. RGB (? , ?, ?). Simple!!!</p>
+            <p>Or you can click the new colors button to start from the hard difficulty.</p>
+            <p class="lead">Created By Maruf</p>
         </div>
     </section>
 
