fixed spacing issues.

--- a/Color Game/index.html
+++ b/Color Game/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <section id="header" class="container-fluid text-center py-3 px-0"> 
+    <section id="header" class="container-fluid text-center py-2 px-0"> 
         <h1>The Great</h1>
         <h2 id="rgbValue">RGB(23,56,34)</h2>
         <h1>Color Game</h1>
@@ -24,25 +24,20 @@
 
     <section id="nav" class="text-center container-fluid" >
         <div class="row">
-
-            <div class="col-4">
-                <button id="newColor" class="btn btn-outline-info">New Colors</button>
+            <div class="col-4 d-flex align-content-end">
+                <button id="newColor" class="btn btn-outline-info px-1 px-sm-3">New Colors</button>
             </div>
 
             <div class="col-4">
                 <p id="msg" class="mb-0"></p>
             </div>
 
-            <div class="col-1 d-flex justify-content-end px-1">
-                <button  id="easy" class="btn btn-outline-warning">EASY</button>
+            <div class="col-2 d-flex align-content-end justify-content-end px-1  ">
+                <button  id="easy" class="btn btn-outline-warning  px-1 px-sm-2">EASY</button>
             </div>
 
-            <div class="col-1 d-flex justify-content-start px-1">
-                <button  id="hard" class="btn btn-outline-danger active">HARD</button>
-            </div>
-
-            <div class="col-1 d-flex justify-content-start px-1 py-1">
-               <a href="https://www.w3schools.com/colors/colors_rgb.asp"><i class="far fa-question-circle"></i></a>
+            <div class="col-2 d-flex align-content-end justify-content-start px-1 ">
+                <button  id="hard" class="btn btn-outline-danger active px-1 px-sm-2">HARD</button>
             </div>
 
         </div>
