scoring addition intial changes.

--- a/Color Game/index.html
+++ b/Color Game/index.html
@@ -44,6 +44,13 @@
         
     </section>
 
+    <section id="score">
+        <div class="container-fluid text-center text-black d-none">
+            Your Score = <span id="myScore" >Score</span> / <span id="gamesPlayed" >Total Score</span>
+        </div>
+
+    </section>
+
     <section id="boxes" class="container">
         
         <div class="row pt-4">
