--- a/Color Game/index.html
+++ b/Color Game/index.html
@@ -44,16 +44,16 @@
         
     </section>
 
-    <section id="score">
-        <div class="container-fluid text-center text-black d-none">
-            Your Score = <span id="myScore" >Score</span> / <span id="gamesPlayed" >Total Score</span>
+    <section id="score" >
+        <div class="container-fluid text-center text-black py-2">
+            Total points= <span id="myScore" >My Score</span> / <span id="gamesPlayed" >Total Score</span>
         </div>
 
     </section>
 
     <section id="boxes" class="container">
         
-        <div class="row pt-4">
+        <div class="row pt-2">
             <div  class="col-4"><button class="btn box" ></button> </div>
             <div  class="col-4"><button class="btn box"></button>  </div>
             <div  class="col-4"><button class="btn box"></button> </div>
