spacing issue fixed.

--- a/Color Game/index.html
+++ b/Color Game/index.html
@@ -24,7 +24,7 @@
 
     <section id="nav" class="text-center container-fluid" >
         <div class="row">
-            <div class="col-4 d-flex align-content-end">
+            <div class="col-4 d-flex justify-content-center">
                 <button id="newColor" class="btn btn-outline-info px-1 px-sm-3">New Colors</button>
             </div>
 
