Added information for better understanding.

--- a/Color Game/index.html
+++ b/Color Game/index.html
@@ -52,7 +52,7 @@
     </section>
 
     <section id="boxes" class="container">
-        
+        <p id="info" class="text-center" >Pick the color below that represents the above RGB values. More info below: <a href="#bottomNavBar"><i class="fas fa-arrow-down"></i></a></p>
         <div class="row pt-2">
             <div  class="col-4"><button class="btn box" ></button> </div>
             <div  class="col-4"><button class="btn box"></button>  </div>
@@ -69,8 +69,8 @@
         <div class="container-fluid">
             <a href="https://www.w3schools.com/colors/colors_rgb.asp"> What is RGB?</a>
             <h3>How do you play ?</h3>
-            <p>Click on the difficulty and then choose the color that corresponds with the the header value. RGB (? , ?, ?). Simple!!!</p>
-            <p>Or you can click the new colors button to start from the hard difficulty.</p>
+            <p>Click on new colors and then choose the color that corresponds with the the header value. RGB (? , ?, ?). Simple!!!</p>
+            <p>You can change the difficulty by default its hard.</p>
             <p class="lead">Created By Maruf</p>
         </div>
     </section>
