--- a/jQuery/Todo List Project/index.html
+++ b/jQuery/Todo List Project/index.html
@@ -16,12 +16,23 @@
 <script type="text/javascript" src="assests/JS/lib/jquery-3.5.1.min.js"></script>
 
 <!-- CSS files -->
-<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="assests/css/style.css">
 
 <title>To-do List</title>
 </head>
 <body>
-    
+
+    <section id="mainTodo">
+        <div class="container">
+            <h1>To-Do List</h1>
+            <input type="text">
+            <ul>
+                <li> <span>X</span> Go to school</li>
+                <li> <span>X</span> Buy books</li>
+                <li> <span>X</span> Visit Hagrid</li>
+            </ul>
+        </div>
+    </section>
 
 
 
