--- a/jQuery/Todo List Project/index.html
+++ b/jQuery/Todo List Project/index.html
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="Description" content="Enter your description here" />
 
-<!-- Bootstrap -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
 
-<!-- Font Awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 
-<!-- jQuery Library Files -->
-<script type="text/javascript" src="assests/JS/lib/jquery-3.5.1.min.js"></script>
+    <!-- jQuery Library Files -->
+    <script type="text/javascript" src="assests/JS/lib/jquery-3.5.1.min.js"></script>
 
-<!-- CSS files -->
-<link rel="stylesheet" href="assests/css/style.css">
+    <!-- CSS files -->
+    <link rel="stylesheet" href="assests/css/style.css">
 
-<title>To-do List</title>
+    <title>To-do List</title>
 </head>
+
 <body>
 
-    <section id="mainTodo">
-        <div class="container">
-            <h1>To-Do List</h1>
-            <input type="text">
-            <ul>
-                <li> <span>X</span> Go to school</li>
-                <li> <span>X</span> Buy books</li>
-                <li> <span>X</span> Visit Hagrid</li>
-            </ul>
-        </div>
-    </section>
+    <div id="todos" class="container">
+
+        <h1>To-Do List</h1>
+        <br>
+        <input type="text">
+        <ul>
+            <li> <span>X</span> Go to school</li>
+            <li> <span>X</span> Buy books</li>
+            <li> <span>X</span> Visit Hagrid</li>
+        </ul>
+
+
+
+    </div>
 
 
 
 
-<!-- FIles associated with bootstrap 4 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <!-- FIles associated with bootstrap 4 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-<!-- Custom JS file -->
-<script type="text/javascript" src="assests/JS/todos.js"></script>
+    <!-- Custom JS file -->
+    <script type="text/javascript" src="assests/JS/todos.js"></script>
 </body>
+
 </html>
