--- a/jQuery/Todo List Project/index.html
+++ b/jQuery/Todo List Project/index.html
@@ -16,6 +16,9 @@
     <!-- jQuery Library Files -->
     <script type="text/javascript" src="assests/JS/lib/jquery-3.5.1.min.js"></script>
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+    
     <!-- CSS files -->
     <link rel="stylesheet" href="assests/css/style.css">
 
@@ -23,16 +26,15 @@
 </head>
 
 <body>
+    
+    <div id="todos" class="container px-0">
 
-    <div id="todos" class="container">
-
-        <h1>To-Do List</h1>
-        <br>
-        <input type="text">
+        <h1 class="px-2 py-2 my-0 text-center">To-Do List<i class="fas fa-pencil-alt"></i></h1>
+        <input type="text" class="p-2 text-center" placeholder="ADD NEW TODO">
         <ul>
-            <li> <span>X</span> Go to school</li>
-            <li> <span>X</span> Buy books</li>
-            <li> <span>X</span> Visit Hagrid</li>
+            <li> <span><i class="fas fa-trash-alt"></i></span> Go to school</li>
+            <li> <span><i class="fas fa-trash-alt"></i></span> Buy books</li>
+            <li> <span><i class="fas fa-trash-alt"></i></span> Visit Hagrid</li>
         </ul>
 
 
