--- a/jQuery/Todo List Project/index.html
+++ b/jQuery/Todo List Project/index.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     
     <!-- CSS files -->
-    <link rel="stylesheet" href="assests/css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <title>To-do List</title>
 </head>
