--- a/Patatap Project/circles.html
+++ b/Patatap Project/circles.html
@@ -17,6 +17,8 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.0/howler.core.min.js"></script>
     <!-- Styles for the Page -->
     <link rel="stylesheet" href="assets/CSS/style.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
     <!-- Canvas for paper Js -->
     <script type="text/paperscript" canvas="myCanvas">
 
@@ -181,6 +183,9 @@ function onKeyDown(event) {
 </head>
 
 <body>
+    <div id="header">
+        <h4>Press any alphabet key on your keyboard and see the magic</h4>
+    </div>
     <canvas id="myCanvas" resize></canvas>
     
 </body>
