--- a/Patatap Project/index.html
+++ b/Patatap Project/index.html
@@ -190,7 +190,7 @@ function onKeyDown(event) {
 
 <body>
     <div id="header">
-        <h4>Press any alphabet key on your keyboard and see the magic</h4>
+        <h4>Press any alphabet key on your keyboard and see the magic. Only works with browsers :(</h4>
     </div>
     <canvas id="myCanvas" resize></canvas>
 
